[tool.poetry]
name = "repl-nix-investsmartly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
yfinance = "^0.2.43"
plotly = "^5.24.1"
streamlit-lottie = "^0.0.5"
ta = "^0.11.0"
pandas = "^2.2.2"
bcrypt = "^4.2.0"
requests = "^2.32.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
